@@ -3,6 +3,10 @@ partconf (1.08) UNRELEASED; urgency=low
   * Christian Perrier
     - Add a comment about the Choices length for translators
       in the debconf templates file
+  * Colin Watson
+    - get_all_partitions()'s symlink handling in /dev/discs was incorrect in
+      places, and broke when using udev. Replace it with use of
+      canonicalize_file_name().
 
  -- Christian Perrier <bubulle@debian.org>  Sat, 19 Mar 2005 12:26:03 +0100
 
